# ndiCamera

ndi_camera/: README.md  pubspec.yaml
ndi_camera/android/app/: build.gradle.kts
ndi_camera/android/app/src/main/: AndroidManifest.xml
ndi_camera/android/app/src/main/cpp/: CMakeLists.txt  ndi_sender.cpp
ndi_camera/android/app/src/main/kotlin/com/example/ndi_camera/: CameraPreviewActivity.kt  CameraUtils.kt  MainActivity.kt  NdiSender.kt
ndi_camera/ios/Runner/: Info.plist
ndi_camera/ios/Runner.xcodeproj/: project.pbxproj
ndi_camera/lib/: main.dart
ndi_camera/linux/: CMakeLists.txt
ndi_camera/linux/runner/: my_application.cc
ndi_camera/macos/Runner.xcodeproj/: project.pbxproj
ndi_camera/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ndi_camera/macos/Runner/Configs/: AppInfo.xcconfig
ndi_camera/test/: widget_test.dart
ndi_camera/web/: index.html  manifest.json
ndi_camera/windows/: CMakeLists.txt
ndi_camera/windows/runner/: Runner.rc  main.cpp
